--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -23,18 +23,10 @@
         </div>
         <div class="row">
             <div class="col-7 text-end">
-                {{parameter_set_form.period_length.label}}:
+                {{parameter_set_form.enable_chat.label}}:                
             </div>
             <div class="col text-start">
-                [[session.parameter_set.period_length]]
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-7 text-end">
-                {{parameter_set_form.private_chat.label}}:                
-            </div>
-            <div class="col text-start">
-                <span v-if="session.parameter_set.private_chat=='True'">Yes</span><span v-else>No</span>                
+                <span v-if="session.parameter_set.enable_chat=='True'">Yes</span><span v-else>No</span>                
             </div>  
         </div>
         <div class="row">
