--- a/main/templates/staff/staff_session_parameters/players/players_card.html
+++ b/main/templates/staff/staff_session_parameters/players/players_card.html
@@ -17,45 +17,43 @@
             <!-- player settings -->
             <div class="col-md-auto text-center">                
                 <div class="table-responsive">
-                <table class="table table-condensed"> 
-                    <thead>
-                        <tr>
-                            <th scope="col" class = "m-1 p-1">
-                                #
-                            </th> 
-                            <th scope="col" class = "m-1 p-1">
-                                Label
-                            </th>                           
-                        </tr>
-                    </thead>
-                    <tbody id="player_list">
-                        <tr v-for="(p, index) in session.parameter_set.parameter_set_players" v-bind:key="p.id">
-                            <td v-on:click="showEditParametersetPlayer(index)" class="player_table_cell">
-                                [[index+1]]
-                            </td>
-                            <td v-on:click="showEditParametersetPlayer(index)" class="player_table_cell">
-                                [[p.id_label]]
-                            </td>
-                            
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <!-- copy groups forward -->
-                        <tr>
-                            <td>
-                                <button class="btn btn-outline-success btn-sm"
-                                        type="button"
-                                        title="Add player"
-                                        v-bind:disabled="session.started || reconnecting || working || session.parameter_set.parameter_set_players.length >= 24"
-                                        v-on:click="sendAddParameterSetPlayer()">
-                                       Add <i class="fas fa-plus"></i>
-                                </button>
-                            </td>                            
-                            <td>
-                            </td>
-                        </tr>
-                    </tfoot>
-                </table>
+                    <table class="table table-condensed"> 
+                        <thead>
+                            <tr>
+                                <th scope="col" class = "m-1 p-1">
+                                    #
+                                </th> 
+                                <th scope="col" class = "m-1 p-1">
+                                    Label
+                                </th>                           
+                            </tr>
+                        </thead>
+                        <tbody id="player_list">
+                            <tr v-for="(p, index) in session.parameter_set.parameter_set_players" v-bind:key="p.id">
+                                <td v-on:click="showEditParametersetPlayer(index)" class="player_table_cell">
+                                    [[index+1]]
+                                </td>
+                                <td v-on:click="showEditParametersetPlayer(index)" class="player_table_cell">
+                                    [[p.id_label]]
+                                </td>
+                                
+                            </tr>
+                        </tbody>
+                        
+                    </table>
+
+                    <div class="input-group">
+
+                        <input v-model="increment_player" type="number" min="1" max="100" class="form-control text-center" v-bind:disabled="session.started || reconnecting || working">
+
+                        <button class="btn btn-outline-success btn-sm"
+                                type="button"
+                                title="Add player"
+                                v-bind:disabled="session.started || reconnecting || working || session.parameter_set.parameter_set_players.length >= 24"
+                                v-on:click="sendAddParameterSetPlayer()">
+                            Add <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>  
