--- a/main/templates/staff/staff_session_parameters.html
+++ b/main/templates/staff/staff_session_parameters.html
@@ -6,7 +6,25 @@
 
     $(document).ready(function(){
         {%include "staff/staff_session_parameters/staff_session_parameters.js"%}
+
+        tinyMCE.init({
+            target: document.getElementById('id_notice_text'),
+            height : "400",
+            theme: "silver",
+            plugins: "directionality,paste,searchreplace,code",
+            directionality: "{{ directionality }}",
+        });
+    
+        // Prevent Bootstrap dialog from blocking focusin
+        document.addEventListener('focusin', (e) => {
+            if (e.target.closest(".tox-tinymce-aux, .moxman-window, .tam-assetmanager-root") !== null) {
+                e.stopImmediatePropagation();
+            }
+        });
+        
     });
+
+   
 
 </script>
 <style>
