--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -48,47 +48,6 @@
         background-color:#ececec;
     }
 
-    .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: [row1-start] 30% [row1-end row2-start] 70% [row2-end];
-        align-content: end;
-    }
-
-    .one {
-        grid-column: 1 / 4;
-        grid-row: 1 / 3;
-        height: 600px;
-        background-color: white; 
-        width: 100%;
-        z-index: 1;
-        /* border-style: solid; */
-    }
-
-    .two {
-        grid-column: 2;
-        grid-row: 2 / 3;
-        height: 375px;
-        z-index: 2;
-        width: 100%;
-        word-breaK:break-word;
-        overflow-y:scroll;
-        margin-top: 20px;
-        background-color: ghostwhite;
-    }
-
-    .three{
-        grid-column: 2;
-        grid-row: 1 / 2;
-        height: 175px;
-        z-index: 2;
-        width: 100%;
-        word-breaK:break-word;
-        overflow-y:scroll;
-        margin-top: 10px;
-        background-color: ghostwhite;
-    }
-
 </style>
 
 {%endblock head%}
@@ -103,9 +62,6 @@
 {%include "staff/staff_session/control/sendInvitationModal.html"%}
 
 <!-- cards -->
-<div class="row justify-content-lg-center" v-cloak>
-        
-</div>
 
 <div class="row justify-content-lg-center mt-4" v-cloak>
     <div class="col-md-9">
@@ -114,11 +70,13 @@
                 {%include "staff/staff_session/subjects/subjects_card.html"%} 
             </div>               
         </div>        
+        {%if session.parameter_set.enable_chat%}
         <div class="row">
             <div class="col">
                {%include "staff/staff_session/graph/graph_card.html"%} 
             </div>            
-        </div>            
+        </div>   
+        {%endif%}         
     </div>
     <div class="col-md-3">
         <div class="row">
