--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -21,14 +21,14 @@
                 [[session.parameter_set.period_count]]
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-7 text-end">
                 {{parameter_set_form.enable_chat.label}}:                
             </div>
             <div class="col text-start">
                 <span v-if="session.parameter_set.enable_chat=='True'">Yes</span><span v-else>No</span>                
             </div>  
-        </div>
+        </div> -->
         <div class="row">
             <div class="col-7 text-end">
                 {{parameter_set_form.show_instructions.label}}:                
