--- a/main/templates/staff/staff_session_parameters/players/players_card.html
+++ b/main/templates/staff/staff_session_parameters/players/players_card.html
@@ -47,16 +47,23 @@
                         
                     </table>
 
-                    <div class="input-group">
-
-                        <input v-model="increment_player" type="number" min="1" max="100" class="form-control text-center" v-bind:disabled="session.started || reconnecting || working">
-
+                    <div class="input-group">                        
                         <button class="btn btn-outline-success btn-sm"
                                 type="button"
                                 title="Add player"
-                                v-bind:disabled="session.started || reconnecting || working || session.parameter_set.parameter_set_players.length >= 24"
+                                v-bind:disabled="session.started || reconnecting || working"
                                 v-on:click="sendAddParameterSetPlayer()">
                             Add <i class="fas fa-plus"></i>
+                        </button>
+
+                        <input v-model="increment_player" type="number" min="1" max="100" class="form-control text-center" v-bind:disabled="session.started || reconnecting || working">
+
+                        <button type="button"
+                                class="btn btn-outline-danger"
+                                title="Remove player from parameter set."
+                                v-on:click = "sendRemoveParameterSetPlayer()"
+                                v-bind:disabled="reconnecting || working ||  session.parameter_set.parameter_set_players.length <= 1">
+                            Delete <i class="fas fa-minus"></i> 
                         </button>
                     </div>
                 </div>
