--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -12,57 +12,6 @@
 
 <style>
 
-    .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: [row1-start] 30% [row1-end row2-start] 70% [row2-end];
-        align-content: end;
-    }
-
-    .one {
-        grid-column: 1 / 4;
-        grid-row: 1 / 3;
-        height: 600px;
-        background-color: white; 
-        width: 100%;
-        z-index: 1;
-        /* border-style: solid; */
-    }
-
-    .two {
-        grid-column: 2;
-        grid-row: 2 / 3;
-        height: 375px;
-        z-index: 2;
-        width: 100%;
-        word-breaK:break-word;
-        overflow-y:scroll;
-        margin-top: 20px;
-        background-color: ghostwhite;
-    }
-
-    .three{
-        grid-column: 2;
-        grid-row: 1 / 2;
-        height: 175px;
-        z-index: 2;
-        width: 100%;
-        word-breaK:break-word;
-        overflow-y:scroll;
-        margin-top: 10px;
-        background-color: ghostwhite;
-    }
-
-    img {
-        max-width:100%;
-        max-height:100%; 
-        height: auto;        
-    }
-
-    .image_choice_grid{
-        cursor: pointer;
-    }
-
     .instructions{
         height: 300px;
         overflow-y:scroll;
@@ -85,10 +34,20 @@
 </div>
 
 <!-- experiment -->
+
+<!-- not started -->
+<div class="row justify-content-center mt-4" v-cloak v-show="session.started == false">
+    <div class="col text-center">
+        Please wait
+    </div>
+</div>
+
 <div class="row justify-content-lg-center mt-4" v-cloak v-show="session.current_experiment_phase != 'Done'">
-    <div class="col-md-9">
+    {%if session.parameter_set.enable_chat%}
+    <div class="col">
         {%include "subject/subject_home/graph_card.html"%}                
     </div>
+    {%endif%}
     <div class="col-md-3">
         <div class="row">
             <div class="col-md">
