--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -15,10 +15,10 @@
         <!-- parameterset settings -->        
         <div class="row">
             <div class="col-7 text-end">
-                {{parameter_set_form.period_count.label}}:
+                {{parameter_set_form.display_block.label}}:
             </div>
             <div class="col text-start">
-                [[session.parameter_set.period_count]]
+                [[session.parameter_set.display_block]]
             </div>
         </div>
         <!-- <div class="row">
