--- a/main/templates/staff/staff_session/summary/summary_card.html
+++ b/main/templates/staff/staff_session/summary/summary_card.html
@@ -22,7 +22,7 @@
                 Current Period:
             </div>
             <div class="col text-start ps-1">
-                [[session.current_period]] of [[session.parameter_set.period_count]]
+                [[session.current_period]] of [[session.parameter_set.parameter_set_periods.length]]
             </div>
         </div>  
     </div>                    
