--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -16,6 +16,15 @@
         height: 300px;
         overflow-y:scroll;
     }
+
+    .graph {
+
+        height: 500px;
+        background-color: white; 
+        width: 100%;
+        border-style: solid;
+        border-width: 1px;
+    }
        
 </style>
 
