--- a/main/templates/staff/staff_session_parameters.html
+++ b/main/templates/staff/staff_session_parameters.html
@@ -66,14 +66,14 @@
     </div> 
     <div class="col-md">
         {%include "staff/staff_session_parameters/control/control_card.html"%}  
-    </div>              
+    </div>     
+    <div class="col-md">
+        {%include "staff/staff_session_parameters/zone_minutes/zone_minutes_card.html"%}  
+    </div>         
 </div>
 
 <div class="row justify-content-lg-center" v-cloak>
-    <div class="col-md">
-        {%include "staff/staff_session_parameters/zone_minutes/zone_minutes_card.html"%}  
-    </div>
-    <div class="col-md-9">
+    <div class="col">
         {%include "staff/staff_session_parameters/periods/periods_card.html"%}  
     </div>
 </div>
