--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -21,6 +21,14 @@
                 [[session.parameter_set.display_block]]
             </div>
         </div>
+        <div class="row">
+            <div class="col-7 text-end">
+                {{parameter_set_form.graph_y_max.label}}:
+            </div>
+            <div class="col text-start">
+                [[session.parameter_set.graph_y_max]]
+            </div>
+        </div>
         <!-- <div class="row">
             <div class="col-7 text-end">
                 {{parameter_set_form.enable_chat.label}}:                
