--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -47,6 +47,9 @@
                                 Student ID
                             </th>
                             <th scope="col" class = "text-center m-1 p-1">
+                                Group Number
+                            </th>
+                            <th scope="col" class = "text-center m-1 p-1">
                                 Color
                             </th>                                                  
                             <th scope="col" class = "text-center m-1 p-1">
@@ -77,7 +80,10 @@
                             <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
                                 [[p.student_id=="" ? "---" : p.student_id]]
                             </td>
-                            <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)" v-bind:style="{color:p.parameter_set_player.display_color}">
+                            <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
+                                [[p.group_number]]
+                            </td>
+                            <td class="player_table_cell text-nowrap" v-bind:style="{color:p.parameter_set_player.display_color}">
                                 [[p.parameter_set_player.display_color]]
                             </td>                                                        
                             <td class="player_table_cell text-nowrap">
