--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -48,12 +48,11 @@
     <body style="font-size:16px"> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         
-
         {% if user.is_authenticated %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-1 d-print-none">
             <div class="container-fluid">
                 <a class="navbar-brand">
-                    ESI - Template
+                    Fitbit 2
                 </a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
