--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -51,14 +51,14 @@
 
 <!-- graph -->
 <div class="row justify-content-center mt-4" v-cloak v-show="session.current_experiment_phase != 'Done'">
-    <div class="col-md-6">
+    <div class="col-md">
         {%include "subject/subject_home/graph/graph_card.html"%}                
     </div>
 </div>
 
 <!-- summary -->
 <div class="row justify-content-center mt-4" v-cloak v-show="session.current_experiment_phase != 'Done'">
-    <div class="col-md-6">
+    <div class="col-md">
         {%include "subject/subject_home/summary/summary_card.html"%}     
     </div>
 </div>
@@ -74,7 +74,7 @@
 </div>
 
 <div class="row justify-content-center mt-4">
-    <div class="col-12 text-end text-muted">
+    <div class="col-md text-end text-muted">
         <span class="align-middle">Client [[session_player.player_number]]</span>
     </div>  
 </div>
